--- a/src/index.css
+++ b/src/index.css
@@ -24,17 +24,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -52,6 +42,12 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+img{
+  display:block;
+    max-width: 100%;
+    max-height: 100%;
+      object-fit: cover;
 }
 
 @media (prefers-color-scheme: light) {
